fix(80525472): add padding left and margin bottom on mobile view in the tab

--- a/Project/Project/wwwroot/css/site.css
+++ b/Project/Project/wwwroot/css/site.css
@@ -558,6 +558,11 @@ html .swiper-button-next, html .swiper-button-prev {
     }
 
     /* General styles for nav tabs */
+    
+    #myTab {
+        padding-left: .75rem;
+        margin-bottom: 1rem;
+    }
 
     #watchlist-tab {
         background-color: var(--purple-color);
